Add ConvertTest.java and CopyTest.java